--- a/task-1.html
+++ b/task-1.html
@@ -4,15 +4,15 @@
     <caption><h1>Create Register Form<br>Using jQuery</h1><hr/></caption>
 	<tr>
 	  <th align="left">Name:
-	  <input type="text" size="40"/></th>
+	  <input type="text" size="40" placeholder="Enter Name"/></th>
 	</tr>
 	<tr>
 	  <th align="left">Email:
-	  <input type="email" size="40"/></th>
+	  <input type="email" size="40" placeholder="Enter Email"/></th>
 	</tr>
 	<tr>
 	  <th align="left">Password:
-	  <input type="password" size="40"/></th>
+	  <input type="password" size="40" placeholder="Enter Password"/></th>
 	</tr>
 	<tr>
 	  <th align="left">Confirm Password:
